# gitrs

./: .gitignore  .pre-commit-config.yaml  .vale.ini  Cargo.toml  LICENSE.md  README.md  flake.nix  shell.nix
docs/: inspiration.md  learnings.md
src/: config.rs  fs.rs  main.rs  repo.rs
