[package]
name = "gitrs"
version = "0.1.0"
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
git2 = "0.17.1"
home = "0.5.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tempfile = "3.5.0"
