[package]
name = "gitrs"
version = "0.3.0"
authors = ["mccurdyc"]
description = "A simple, opinionated, tool, written in Rust, for declaratively managing Git repos on your machine."
readme = "./README.md"
homepage = "https://github.com/mccurdyc/gitrs"
repository = "https://github.com/mccurdyc/gitrs"
license = "MIT"
license-file = "./LICENSE.md"
keywords = ["git", "repositories", "declarative"]
edition = "2021"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
git2 = "0.17.1"
home = "0.5.5"
log = { version = "0.4.18", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tempfile = "3.5.0"
walkdir = "2.3.3"
